--- a/src/app/classroom/settings/components/configuration/configuration.component.html
+++ b/src/app/classroom/settings/components/configuration/configuration.component.html
@@ -29,7 +29,7 @@
   <h3 class="mat-h2 mat-hint">{{'THEME' | translate}}</h3>
 
   <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="1rem">
-    <mat-icon color="primary">{{themeControl.icon}}</mat-icon>
+    <fa-icon class="mat-icon-22 color-primary" [icon]="themeControl.icon"></fa-icon>
     <mat-slide-toggle labelPosition="before" (change)="toggleTheme()" [(ngModel)]="themeIsDark">
       {{'THEMING.DARK_MODE' | translate}}
     </mat-slide-toggle>
@@ -41,7 +41,7 @@
   <h3 class="mat-h2 mat-hint">{{'BEHAVIOR.TITLE' | translate}}</h3>
 
   <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="1rem">
-    <mat-icon color="primary">swap_horiz</mat-icon>
+    <fa-icon class="mat-icon-20 color-primary color-primary" icon="stream"></fa-icon>
     <div fxLayout="column">
       <mat-slide-toggle labelPosition="before" (change)="togglePanSideMenu()" [(ngModel)]="canPanSideMenu">
         {{'BEHAVIOR.PAN_SIDEMENU' | translate}}
