--- a/src/app/shared/components/day-creation/day-creation.component.scss
+++ b/src/app/shared/components/day-creation/day-creation.component.scss
@@ -1,6 +1,11 @@
 mat-form-field {
   width: 100%;
   padding: 0 5px;
+
+  .avatar-container {
+    position: relative;
+    top:  3px;
+  }
 }
 
 .full {
