--- a/src/app/shared/components/toast/toast.component.scss
+++ b/src/app/shared/components/toast/toast.component.scss
@@ -1,11 +1,11 @@
-.info mat-icon {
+.info fa-icon {
   color: #5faef7
 }
 
-.warning mat-icon {
+.warning fa-icon {
   color: #f7ba5f
 }
 
-.error mat-icon {
+.error fa-icon {
   color: #f75f5f
 }
