--- a/src/app/authentication/components/login/login.component.scss
+++ b/src/app/authentication/components/login/login.component.scss
@@ -41,7 +41,12 @@
 
 mat-form-field {
   width: 100%;
-  min-width: 100px
+  min-width: 100px;
+
+  button[mat-icon-button] {
+    position: relative;
+    top: -6px;
+  }
 }
 
 .login-button {
