--- a/src/app/classroom/students/components/student-list/student-list.component.html
+++ b/src/app/classroom/students/components/student-list/student-list.component.html
@@ -10,10 +10,10 @@
     <mat-label>{{'SEARCH_STUDENT' | translate}}</mat-label>
     <input matInput [(ngModel)]="studentFilter" (ngModelChange)="searchStudent($event)"
       attr.aria-label="{{'SEARCH_STUDENT' | translate}}" autocomplete="off">
-    <mat-icon class="mat-hint" matSuffix *ngIf="!studentFilter">search</mat-icon>
+    <fa-icon *ngIf="!studentFilter" matSuffix class="mat-icon-20 mat-hint mr-h" icon="search"></fa-icon>
     <button class="reset-button" mat-button matSuffix *ngIf="studentFilter" mat-icon-button
       attr.aria-label="{{'RESET_FILTER' | translate}}" (click)="resetFilter()">
-      <mat-icon class="mat-icon-24 mat-hint">close</mat-icon>
+      <fa-icon class="mat-icon-20 mat-hint" icon="times"></fa-icon>
     </button>
   </mat-form-field>
 
