--- a/src/app/classroom/students/components/student-list/student-list.component.scss
+++ b/src/app/classroom/students/components/student-list/student-list.component.scss
@@ -9,5 +9,10 @@ mat-form-field {
 
 .reset-button {
   position: relative;
-  top: -2px
+  top: -8px;
+
+  fa-icon {
+    position: relative;
+    top: 1px;
+  }
 }
