--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -17,34 +17,6 @@ $primary-typography: mat-typography-config($font-family: map-get($fonts, primary
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
-// material-icon
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Material Icons'),
-    local('MaterialIcons-Regular'),
-    url('/assets/fonts/MaterialIcons-Regular.woff2') format('woff2'),
-    url('/assets/fonts/MaterialIcons-Regular.woff') format('woff')
-}
-
-.material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
-}
-
 // Icons sizes
-$iconSizes: (12 : 12px, 14 : 14px, 16 : 16px, 18 : 18px, 24 : 24px, 28 : 28px, 32 : 32px);
+$iconSizes: (12 : 12px, 14 : 14px, 16 : 16px, 18 : 18px, 22 : 22px, 20 : 20px, 24 : 24px, 28 : 28px, 32 : 32px);
 @include set-icon-classes($iconSizes);
