Create footer toolbar

--- a/src/app/classroom/components/classroom/classroom.component.html
+++ b/src/app/classroom/components/classroom/classroom.component.html
@@ -1,12 +1,8 @@
-<!-- Header -->
-<a13-header [sidenav]="sideMenu"></a13-header>
-
-<!-- Sidebar container -->
 <mat-sidenav-container class="sidenav-container">
 
   <!-- Side-menu -->
   <mat-sidenav #sideMenu class="sidenav border-0" [mode]="mobileQueryS.matches ? 'over' : 'side'"
-    [opened]="!mobileQueryS.matches" [fixedInViewport]="true" fixedTopGap="64"
+    [opened]="!mobileQueryS.matches" [fixedInViewport]="true"
     [@onSideNavChange]="{value: onSideNavChange ? 'open' : 'close', params: {widthClose: animStyles.close.width, widthOpen: animStyles.open.width}}">
     <a13-side-menu></a13-side-menu>
   </mat-sidenav>
@@ -14,8 +10,18 @@
   <!-- Content -->
   <mat-sidenav-content id="main-content-container"
     [@onMainContentChange]="{value: onSideNavChange ? 'open' : 'close', params: {leftClose: animStyles.close.left, leftOpen: animStyles.open.left}}">
-    <div class="main-content">
-      <router-outlet></router-outlet>
+    <div class="main-content" fxLayout="column">
+      <!-- Header -->
+      <a13-header [sidenav]="sideMenu"></a13-header>
+
+      <!-- Router -->
+      <main class="router-container">
+        <router-outlet></router-outlet>
+      </main>
+
+      <!-- Footer toolbar -->
+      <a13-footer-toolbar class="mat-elevation-z4" [sidenav]="sideMenu" fxFlexAlign="start end"></a13-footer-toolbar>
     </div>
   </mat-sidenav-content>
+
 </mat-sidenav-container>
