--- a/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
+++ b/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
@@ -123,7 +123,7 @@
   <mat-tab-group mat-stretch-tabs color="primary">
     <mat-tab>
       <ng-template mat-tab-label>
-        <fa-icon class="mat-icon-20" icon="calendar-alt"></fa-icon>
+        <fa-icon class="mat-icon-20" icon="calendar-day"></fa-icon>
       </ng-template>
       <div class="container">
         <a13-day-card></a13-day-card>
