Sidenav behaviour mobile always

--- a/src/app/classroom/components/classroom/classroom.component.html
+++ b/src/app/classroom/components/classroom/classroom.component.html
@@ -1,18 +1,15 @@
 <mat-sidenav-container class="sidenav-container">
 
   <!-- Side-menu -->
-  <mat-sidenav #sideMenu class="sidenav border-0" [mode]="mobileQueryS.matches ? 'over' : 'side'"
-    [opened]="!mobileQueryS.matches" [fixedInViewport]="true"
-    [@onSideNavChange]="{value: onSideNavChange ? 'open' : 'close', params: {widthClose: animStyles.close.width, widthOpen: animStyles.open.width}}">
+  <mat-sidenav #sideMenu class="sidenav border-0" [mode]="over" [fixedInViewport]="true">
     <a13-side-menu></a13-side-menu>
   </mat-sidenav>
 
   <!-- Content -->
-  <mat-sidenav-content id="main-content-container"
-    [@onMainContentChange]="{value: onSideNavChange ? 'open' : 'close', params: {leftClose: animStyles.close.left, leftOpen: animStyles.open.left}}">
+  <mat-sidenav-content id="main-content-container">
     <div class="main-content" fxLayout="column">
       <!-- Header -->
-      <a13-header [sidenav]="sideMenu"></a13-header>
+      <a13-header class="mat-elevation-z4"></a13-header>
 
       <!-- Router -->
       <main class="router-container">
@@ -20,7 +17,7 @@
       </main>
 
       <!-- Footer toolbar -->
-      <a13-footer-toolbar class="mat-elevation-z4" [sidenav]="sideMenu" fxFlexAlign="start end"></a13-footer-toolbar>
+      <a13-footer-toolbar class="mat-elevation-z4" [sidenav]="sideMenu"></a13-footer-toolbar>
     </div>
   </mat-sidenav-content>
 
