--- a/src/app/classroom/components/footer-toolbar/footer-toolbar.component.html
+++ b/src/app/classroom/components/footer-toolbar/footer-toolbar.component.html
@@ -9,7 +9,7 @@
 
 	<!-- Side menu -->
 	<button class="menu-button ml-q mr-1" mat-icon-button (click)="toggleSinenav()"
-		attr.aria-label="{{(sidenavState ? 'CLOSE_MENU' : 'OPEN_MENU') | translate}}">
+		attr.aria-label="{{'OPEN_CLOSE_MENU' | translate}}">
 		<fa-icon class="mat-hint mat-icon-22" icon="bars"></fa-icon>
 	</button>
 </mat-toolbar>
