--- a/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
+++ b/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
@@ -13,7 +13,7 @@
       {{student?.name}}</h2>
 
     <!-- Spacer -->
-    <div class="spacer"></div>
+    <span fxFlex></span>
 
     <!-- Menu phone -->
     <button *ngIf="student?.parents?.father?.phone || student?.parents?.mother?.phone" mat-icon-button
