--- a/src/app/shared/components/day-card/day-card.component.html
+++ b/src/app/shared/components/day-card/day-card.component.html
@@ -15,7 +15,7 @@
     </div>
 
     <!-- Spacer -->
-    <span class="spacer"></span>
+    <span fxFlex></span>
 
     <!-- Date -->
     <span class="mat-small mat-hint">{{day?.date | date: 'd MMM'}}</span>
