--- a/src/app/authentication/components/login/login.component.scss
+++ b/src/app/authentication/components/login/login.component.scss
@@ -45,7 +45,12 @@ mat-form-field {
 
   button[mat-icon-button] {
     position: relative;
-    top: -6px;
+    top: -8px;
+
+    fa-icon {
+      top: 0;
+      margin-left: 0
+    }
   }
 }
 
