--- a/src/app/classroom/components/side-menu/side-menu.component.html
+++ b/src/app/classroom/components/side-menu/side-menu.component.html
@@ -1,24 +1,24 @@
 <div class="sidenav-container">
   <div class="side-menu-container" fxLayout="column" fxLayoutGap="10px">
 
+    <!-- Title -->
+    <h1 class="pl-1 pt-h mat-body mat-hint">{{title}}</h1>
+
     <!-- User -->
-    <div class="user-menu" fxLayout="column" fxLayoutAlign="center center">
-      <a matRipple class="avatar avatar-button border-theme border-theme-button"
-        [@animateAvatar]="linkText ? 'huge' : 'small'">
+    <div class="mt-1 mb-2" fxLayout="column" fxLayoutAlign="center center">
+      <a matRipple class="avatar avatar-button border-theme border-theme-button">
         <img class="avatar-image" [src]="srcImage({img: getUser.getUserLogged()?.avatar})" alt="Avatar">
       </a>
-      <span class="user-name mt-1"
-        [@animateText]="linkText ? 'show' : 'hide'">{{ getUser.getUserLogged()?.name || getUser.getUserLogged()?.email}}
+      <span class="user-name mt-1">{{ getUser.getUserLogged()?.name || getUser.getUserLogged()?.email}}
       </span>
     </div>
 
     <!-- Menu -->
-    <mat-nav-list class="m-0 p-0" *ngFor="let menu of menuItems; index as i">
+    <mat-nav-list class="m-0 p-0 nav-list" *ngFor="let menu of menuItems; index as i">
       <ng-container *ngFor="let item of menu">
         <a mat-list-item (click)="onItemSelected(item)">
           <fa-icon class="mat-hint" [icon]="item.icon"></fa-icon>
-          <span class="mat-hint pl-h ml-q"
-            [@animateText]="linkText ? 'show' : 'hide'">{{ item?.name | translate}}</span>
+          <span class="mat-hint pl-h ml-q">{{ item?.name | translate}}</span>
           <span fxFlex></span>
           <button mat-icon-button (click)="openMenu($event)">
             <fa-icon class="mat-hint" icon="ellipsis-v"></fa-icon>
@@ -30,15 +30,24 @@
         <div *ngIf="item.expanded">
           <ng-container *ngFor="let child of item.children">
             <a mat-list-item (click)="onItemSelected(child)" [routerLink]="[ '/' + item?.url ]"
-              routerLinkActive="active {{item?.theme}}" #routerLinkActiveInstance="routerLinkActive"
-              [attr.tabindex]="routerLinkActiveInstance.isActive ? 0 : -1"
-              [ngClass]="{'active': child.route ? router.isActive(child.route, true): false, 'expanded': child.expanded}">
-              <span class="mat-hint pl-h ml-q"
-                [@animateText]="linkText ? 'show' : 'hide'">{{child?.name | translate}}</span>
+              routerLinkActive="active" [ngClass]="{'expanded': child.expanded}">
+              <span class="mat-hint pl-h ml-q">{{child?.name | translate}}</span>
+              <span fxFlex></span>
+              <button mat-icon-button (click)="openMenu($event)">
+                <fa-icon class="mat-hint" icon="ellipsis-v"></fa-icon>
+              </button>
             </a>
           </ng-container>
         </div>
       </ng-container>
+    </mat-nav-list>
+
+    <!-- Configuration -->
+    <mat-nav-list class="m-0 p-0">
+      <a mat-list-item [routerLink]="[ '/aula/configuracion' ]" routerLinkActive="active">
+        <fa-icon class="mat-hint" icon="cog"></fa-icon>
+        <span class="mat-hint pl-h ml-q">{{ 'SETTINGS' | translate}}</span>
+      </a>
     </mat-nav-list>
   </div>
 </div>
