--- a/src/app/classroom/components/side-menu/side-menu.component.scss
+++ b/src/app/classroom/components/side-menu/side-menu.component.scss
@@ -1,3 +1,14 @@
-.user-menu {
-  padding: 2em 0;
+.side-menu-container {
+  width: 100%;
+  height: 100vh;
+
+  .nav-list {
+    flex: 1 0 auto;
+    min-height: auto;
+  }
+}
+
+a[mat-list-item].active span,
+a[mat-list-item].active fa-icon {
+  color: var(--light-theme-primary)
 }
