--- a/src/app/shared/components/floating-button/floating-button.component.scss
+++ b/src/app/shared/components/floating-button/floating-button.component.scss
@@ -1,7 +1,21 @@
 .floating-button {
+  position: fixed;
+  bottom: 5rem;
+  right: 1.75rem;
+  z-index: 1;
+  height: 4rem;
+  border-radius: 50%;
+
   fa-icon {
     position: relative;
     top: 1px;
+  }
+
+  .text-button {
+    display: none;
+    position: relative;
+    top: 1px;
+    margin-left: 5px;
   }
 }
 
@@ -9,21 +23,4 @@
   position: relative;
   top: 1px;
   margin-left: 5px;
-}
-
-@media only screen and (max-width: 600px) {
-
-  .floating-button {
-    position: fixed;
-    bottom: 5rem;
-    right: 1.75rem;
-    z-index: 1;
-    height: 4rem;
-    border-radius: 50%;
-
-    .text-button {
-      display: none;
-    }
-  }
-
 }
