--- a/src/app/classroom/components/header/header.component.html
+++ b/src/app/classroom/components/header/header.component.html
@@ -1,10 +1,67 @@
 <mat-toolbar class="header" [color]="themeName">
 
+
+  <!-- Back button  -->
+  <button *ngIf="headerConfig.back" class="mr-h menu-button" [routerLink]="[ headerConfig.back ]" mat-icon-button
+    attr.aria-label="{{'BACK' | translate}}">
+    <fa-icon class="mat-icon-18" icon="arrow-left"></fa-icon>
+  </button>
+
+  
+  <!-- Title -->
+  <h2 *ngIf="headerConfig.title" class="title" (click)="truncate=!truncate" [ngClass]="{'truncate': !truncate}">
+    {{headerConfig.title | translate}}
+  </h2>
+
   <!-- Spacer -->
   <span fxFlex></span>
 
-  <!-- Sign Out -->
-  <button class="menu-button mr-q" mat-icon-button (click)="logOut()" attr.aria-label="{{'SIGN.OUT' | translate}}">
-    <fa-icon class="mat-icon-18" icon="sign-out-alt"></fa-icon>
+  <!-- Menu phone -->
+  <button *ngIf="headerConfig.student?.parents?.father?.phone || headerConfig.student?.parents?.mother?.phone"
+    class="menu-button" mat-icon-button [matMenuTriggerFor]="menuPhones" attr.aria-label="{{'PHONE_MENU' | translate}}">
+    <fa-icon class="mat-icon-18" icon="phone-alt"></fa-icon>
   </button>
+  <mat-menu #menuPhones="matMenu">
+    <button *ngIf="headerConfig.student?.parents?.father?.phone" mat-menu-item>
+      <a class="clickable-phone-number" href="{{'tel:' + headerConfig.student?.parents?.father?.phone}}">
+        <span *ngIf="headerConfig.student?.parents?.father?.name"
+          class="mat-hint">{{headerConfig.student?.parents?.father?.name}}:</span>
+        <span class="phone">{{headerConfig.student?.parents?.father?.phone}}</span>
+      </a>
+    </button>
+    <button *ngIf="headerConfig.student?.parents?.mother?.phone" mat-menu-item>
+      <a class="clickable-phone-number" href="{{'tel:' + headerConfig.student?.parents?.mother?.phone}}">
+        <span *ngIf="headerConfig.student?.parents?.mother?.name"
+          class="mat-hint">{{headerConfig.student?.parents?.mother?.name}}:</span>
+        <span class="phone">{{headerConfig.student?.parents?.mother?.phone}}</span>
+      </a>
+    </button>
+  </mat-menu>
+
+  <!-- Menu options-->
+  <button *ngIf="headerConfig.student" class="mr-0 menu-button" mat-icon-button [matMenuTriggerFor]="menuOptions"
+    attr.aria-label="{{'OPTION_MENU' | translate}}">
+    <fa-icon class="mat-icon-18" icon="ellipsis-v"></fa-icon>
+  </button>
+  <mat-menu #menuOptions="matMenu">
+    <button mat-menu-item (click)="edit()">
+      <fa-icon class="mat-icon-16 mat-hint" icon="pen"></fa-icon>
+      <span>{{'EDIT_STUDENT' | translate}}</span>
+    </button>
+    <button mat-menu-item (click)="archive()" disabled>
+      <fa-icon class="mat-icon-16 mat-hint" icon="archive"></fa-icon>
+      <span>{{'ARCHIVE_STUDENT' | translate}}</span>
+    </button>
+    <button mat-menu-item (click)="delete()">
+      <fa-icon class="mat-icon-16 mat-hint" icon="trash"></fa-icon>
+      <span>{{'STUDENT_DELETE' | translate}}</span>
+    </button>
+  </mat-menu>
+
+
+  <!-- Sign Out -->
+  <!-- <button class="menu-button mr-q" mat-icon-button (click)="logOut()" attr.aria-label="{{'SIGN.OUT' | translate}}">
+    <fa-icon class="mat-icon-18" icon="sign-out-alt"></fa-icon>
+  </button> -->
+
 </mat-toolbar>
