--- a/src/app/classroom/components/header/header.component.scss
+++ b/src/app/classroom/components/header/header.component.scss
@@ -1,16 +1,33 @@
 .header {
+  position: fixed;
+  top: 0;
   width: 100%;
   height: var(--main-header-size);
-  position: relative;
-  top: 0;
-  z-index: 1000;
+  z-index: 20;
 
+  .title {
+    line-height: 1.25;
+    font-size: 17px;
+  }
+
+  .title,
   .menu-button {
-    color: white;
+    color: var(--light-theme-background);
   }
+}
 
-  h1 a {
-    color: white;
-    text-decoration: none;
+a.clickable-phone-number {
+  display: block;
+  text-decoration: none !important;
+
+  .phone {
+    color: var(--light-theme-primary);
+    margin-left: .5rem;
   }
+}
+
+.mat-menu-item fa-icon {
+  position: relative;
+  top: 1px;
+  margin-right: 10px;
 }
