--- a/src/scss/components.scss
+++ b/src/scss/components.scss
@@ -1,6 +1,8 @@
 // General
 .container {
   padding: var(--main-padding-size);
+  max-height: calc(100vh - var(--main-padding-size) * 2 - var(--main-header-size) * 2);
+  overflow-y: auto;
 }
 
 .mat-dialog-content {
@@ -113,12 +115,14 @@ mat-form-field {
 
 ::-webkit-scrollbar-thumb {
   background-color: #888;
-  border-radius: map-get(map-get($sizes, main), scroll-size)*2;
-  border-width: 2px;
+  border-radius: map-get(map-get($sizes, main), scroll-size) * 2;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, .3);
+  border-width: 1px;
   border-style: solid;
   border-color: transparent;
 }
 
 ::-webkit-scrollbar-track {
-  border-radius: 50%;
+  border-radius: map-get(map-get($sizes, main), scroll-size) * 2;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, .3);
 }
