--- a/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
+++ b/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
@@ -15,7 +15,7 @@
 
         <!-- Subjects -->
         <div class="mb-q" fxLayout="row wrap" fxLayoutAlign="start center">
-          <div class="badge mat-hint" *ngFor="let subject of student?.musical.subjects; let i=index; let first = first">
+          <div class="badge mat-hint" *ngFor="let subject of student?.musical?.subjects; let i=index; let first = first">
             <span>{{'SUBJECT.' + subject.viewValue | translate}}</span>
           </div>
         </div>
