--- a/src/scss/components.scss
+++ b/src/scss/components.scss
@@ -42,6 +42,11 @@ mat-form-field {
   }
 }
 
+.button-close fa-icon {
+  position: relative;
+  top: 1px;
+}
+
 // Avatar button image
 .avatar {
   display: block;
