--- a/src/app/classroom/components/classroom/classroom.component.html
+++ b/src/app/classroom/components/classroom/classroom.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="sidenav-container">
 
   <!-- Side-menu -->
-  <mat-sidenav #sideMenu class="sidenav border-0" mode="over" [fixedInViewport]="true">
+  <mat-sidenav #sideMenu class="sidenav border-0" mode="over" [fixedInViewport]="true" [autoFocus]="false">
     <a13-side-menu></a13-side-menu>
   </mat-sidenav>
 
